--- a/资料/DEFAULT_GROUP/service-driver-dev.yaml
+++ b/资料/DEFAULT_GROUP/service-driver-dev.yaml
@@ -38,8 +38,8 @@ spring:
     password: guest
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://139.198.104.58:3306/daijia_driver?characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://139.198.104.58:3306/daijia_driver?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: shangguigu@QY123
     hikari:
