--- a/资料/DEFAULT_GROUP/service-order-dev.yaml
+++ b/资料/DEFAULT_GROUP/service-order-dev.yaml
@@ -49,7 +49,7 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://139.198.104.58:3306/daijia_order?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://139.198.104.58:3306/daijia_order?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: shangguigu@QY123
     hikari:
