--- a/资料/DEFAULT_GROUP/service-rules-dev.yaml
+++ b/资料/DEFAULT_GROUP/service-rules-dev.yaml
@@ -33,8 +33,8 @@ spring:
           min-idle: 0     #最小空闲
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://139.198.104.58:3306/daijia_rule?characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://139.198.104.58:3306/daijia_rule?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: shangguigu@QY123
     hikari:
