--- a/资料/DEFAULT_GROUP/service-system-dev.yaml
+++ b/资料/DEFAULT_GROUP/service-system-dev.yaml
@@ -34,7 +34,7 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://139.198.104.58:3306/tingshu_system?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=true
+    url: jdbc:mysql://139.198.104.58:3306/tingshu_system?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=true&allowPublicKeyRetrieval=true
     username: root
     password: shangguigu@QY123
     hikari:
