--- a/service/service-order/src/main/resources/bootstrap.properties
+++ b/service/service-order/src/main/resources/bootstrap.properties
@@ -6,3 +6,7 @@ spring.cloud.nacos.config.server-addr=120.55.12.3:8848
 spring.cloud.nacos.config.prefix=${spring.application.name}
 spring.cloud.nacos.config.file-extension=yaml
 spring.cloud.nacos.config.shared-configs[0].data-id=common-account.yaml
+
+seata.tx-service-group=tingshu-tx-group
+seata.service.vgroup-mapping.tingshu-tx-group=default
+seata.service.grouplist.default=120.55.12.3:8091
